{
  "version": 4,
  "terraform_version": "1.14.6",
  "serial": 27,
  "lineage": "9345eea8-601a-862d-2308-5dc82df4312e",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/965a719f-ee48-4f4c-9167-7927ad946ca1/resourceGroups/rg-tp-terraform/providers/Microsoft.Network/networkInterfaces/nic-tp",
            "internal_domain_name_suffix": "afqqhzh3e30endbacec1w2o2pc.parx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/965a719f-ee48-4f4c-9167-7927ad946ca1/resourceGroups/rg-tp-terraform/providers/Microsoft.Network/publicIPAddresses/pip-tp",
                "subnet_id": "/subscriptions/965a719f-ee48-4f4c-9167-7927ad946ca1/resourceGroups/rg-tp-terraform/providers/Microsoft.Network/virtualNetworks/vnet-tp/subnets/snet-tp"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "francecentral",
            "mac_address": "00-0D-3A-E7-51-64",
            "name": "nic-tp",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "rg-tp-terraform",
            "virtual_machine_id": "/subscriptions/965a719f-ee48-4f4c-9167-7927ad946ca1/resourceGroups/rg-tp-terraform/providers/Microsoft.Compute/virtualMachines/vm-tp"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "nic-tp",
            "resource_group_name": "rg-tp-terraform",
            "subscription_id": "965a719f-ee48-4f4c-9167-7927ad946ca1"
          },
          "dependencies": [
            "azurerm_public_ip.pip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "nic_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/965a719f-ee48-4f4c-9167-7927ad946ca1/resourceGroups/rg-tp-terraform/providers/Microsoft.Network/networkInterfaces/nic-tp|/subscriptions/965a719f-ee48-4f4c-9167-7927ad946ca1/resourceGroups/rg-tp-terraform/providers/Microsoft.Network/networkSecurityGroups/nsg-tp",
            "network_interface_id": "/subscriptions/965a719f-ee48-4f4c-9167-7927ad946ca1/resourceGroups/rg-tp-terraform/providers/Microsoft.Network/networkInterfaces/nic-tp",
            "network_security_group_id": "/subscriptions/965a719f-ee48-4f4c-9167-7927ad946ca1/resourceGroups/rg-tp-terraform/providers/Microsoft.Network/networkSecurityGroups/nsg-tp"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_interface.nic",
            "azurerm_network_security_group.nsg",
            "azurerm_public_ip.pip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/965a719f-ee48-4f4c-9167-7927ad946ca1/resourceGroups/rg-tp-terraform/providers/Microsoft.Network/networkSecurityGroups/nsg-tp",
            "location": "francecentral",
            "name": "nsg-tp",
            "resource_group_name": "rg-tp-terraform",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-ssh",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "nsg-tp",
            "resource_group_name": "rg-tp-terraform",
            "subscription_id": "965a719f-ee48-4f4c-9167-7927ad946ca1"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/965a719f-ee48-4f4c-9167-7927ad946ca1/resourceGroups/rg-tp-terraform/providers/Microsoft.Network/networkSecurityGroups/nsg-tp/securityRules/allow-ssh",
            "name": "allow-ssh",
            "network_security_group_name": "nsg-tp",
            "priority": 1001,
            "protocol": "Tcp",
            "resource_group_name": "rg-tp-terraform",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "allow-ssh",
            "network_security_group_name": "nsg-tp",
            "resource_group_name": "rg-tp-terraform",
            "subscription_id": "965a719f-ee48-4f4c-9167-7927ad946ca1"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/965a719f-ee48-4f4c-9167-7927ad946ca1/resourceGroups/rg-tp-terraform/providers/Microsoft.Network/publicIPAddresses/pip-tp",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.199.122.160",
            "ip_version": "IPv4",
            "location": "francecentral",
            "name": "pip-tp",
            "resource_group_name": "rg-tp-terraform",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "pip-tp",
            "resource_group_name": "rg-tp-terraform",
            "subscription_id": "965a719f-ee48-4f4c-9167-7927ad946ca1"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/965a719f-ee48-4f4c-9167-7927ad946ca1/resourceGroups/rg-tp-terraform/providers/Microsoft.Network/virtualNetworks/vnet-tp/subnets/snet-tp",
            "name": "snet-tp",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-tp-terraform",
            "virtual_network_name": "vnet-tp"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "snet-tp",
            "resource_group_name": "rg-tp-terraform",
            "subscription_id": "965a719f-ee48-4f4c-9167-7927ad946ca1",
            "virtual_network_name": "vnet-tp"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "e4036101-27fd-4674-8c20-1105bb71dc7a",
            "id": "/subscriptions/965a719f-ee48-4f4c-9167-7927ad946ca1/resourceGroups/rg-tp-terraform/providers/Microsoft.Network/virtualNetworks/vnet-tp",
            "location": "francecentral",
            "name": "vnet-tp",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "rg-tp-terraform",
            "subnet": [
              {
                "address_prefixes": [
                  "10.0.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/965a719f-ee48-4f4c-9167-7927ad946ca1/resourceGroups/rg-tp-terraform/providers/Microsoft.Network/virtualNetworks/vnet-tp/subnets/snet-tp",
                "name": "snet-tp",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              }
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "vnet-tp",
            "resource_group_name": "rg-tp-terraform",
            "subscription_id": "965a719f-ee48-4f4c-9167-7927ad946ca1"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}